툴바 아이콘 추가, 작동/중지 토글

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>YouTube Bookmarker</title>
+  <meta charset="UTF-8">
+  <title>북마크 제어</title>
 </head>
-<body>
-  <h2>북마크 목록</h2>
-  <ul id="bookmarkList"></ul>
+<body style="margin: 0; padding: 10px; text-align: center;">
+  <img id="ylIcon" src="icons/yl_active_32.png" style="width: 64px; height: 64px; cursor: pointer;">
   <script src="popup.js"></script>
 </body>
 </html>
